Czech language update

--- a/plugins/activity-assets/lang/cs.json
+++ b/plugins/activity-assets/lang/cs.json
@@ -19,7 +19,7 @@
     "In": "V",
     "At": "v",
     "LastReply": "Poslední odpověď",
-    "New": "Nové",
+    "New": "Nový",
     "NewestFirst": "Nejnovější první",
     "Pinned": "Připnuto",
     "Reacted": "Reagoval(a)",
