--- a/plugins/tracker-assets/lang/cs.json
+++ b/plugins/tracker-assets/lang/cs.json
@@ -85,7 +85,7 @@
     "ChangeParent": "Změnit nadřazený úkol…",
     "RemoveParent": "Odebrat nadřazený úkol",
     "OpenParent": "Otevřít nadřazený úkol",
-    "SubIssues": "Podúkoly",
+    "SubIssues": "Podúkol",
     "SubIssuesList": "Podúkoly ({subIssues})",
     "OpenSubIssues": "Otevřít podúkoly",
     "AddSubIssues": "Přidat podúkol",
